--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.CSS">
 </head>
 <body>
     <div id="container">
         <h1>Your clients </h1>
-
     </div>
     <script src="script.js"></script>
+   
 </body>
 </html>
